<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_login_title">Iniciar Sesion</string>
    <string name="fragment_login_helper_email">Correo Electronico</string>
    <string name="fragment_login_helper_password">Contraseña</string>
    <string name="fragment_login_remember_account">Recordar mi cuenta</string>
    <string name="fragment_login_create_account">Crear cuenta</string>
    <string name="fragment_login_forget_password">Olivdé mi contraseña</string>
    <string name="fragment_login_title_login">Ingresar</string>
</resources>